[gd_scene load_steps=13 format=3 uid="uid://dssc3wq6tx33s"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_bvypv"]
[ext_resource type="Theme" uid="uid://cj8a5wdhp0xng" path="res://font_theme.tres" id="1_m2f86"]
[ext_resource type="PackedScene" uid="uid://c3nipp8byki1m" path="res://scenes/scale/ScaleSprite.tscn" id="3_7lmcc"]
[ext_resource type="AudioStream" uid="uid://cxoy7we7yx5mh" path="res://assets/sounds/level/menu_clicks.wav" id="3_s5xlg"]
[ext_resource type="PackedScene" uid="uid://c1o5y5ycxjn83" path="res://scenes/Background.tscn" id="4_k8w1t"]
[ext_resource type="PackedScene" uid="uid://h8wbcij0ikaf" path="res://scenes/scale/ScaleBarSprite.tscn" id="4_wpl5u"]
[ext_resource type="Texture2D" uid="uid://dixshrtdd60kr" path="res://assets/plate.png" id="5_pcejp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yar0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6e03"]
bg_color = Color(0.968627, 0.823529, 0.0352941, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qawf"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_encgy"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_1lrru"]
Button/styles/focus = SubResource("StyleBoxFlat_7yar0")
Button/styles/hover = SubResource("StyleBoxFlat_u6e03")
Button/styles/normal = SubResource("StyleBoxFlat_7qawf")
Button/styles/pressed = SubResource("StyleBoxFlat_encgy")

[node name="startScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_m2f86")
script = ExtResource("1_bvypv")
start_level = "res://scenes/levels/Level1.tscn"

[node name="ScaleSprite" parent="." instance=ExtResource("3_7lmcc")]
layout_mode = 1
offset_top = -130.0
offset_bottom = 143.0

[node name="ScaleBarSprite" parent="." instance=ExtResource("4_wpl5u")]
layout_mode = 0
offset_left = 212.0
offset_top = 69.0
offset_right = 430.0
offset_bottom = 77.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 77.0
offset_right = 265.0
offset_bottom = 269.0
texture = ExtResource("5_pcejp")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 378.0
offset_top = 77.0
offset_right = 474.0
offset_bottom = 269.0
texture = ExtResource("5_pcejp")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.374
anchor_right = 0.5
anchor_bottom = 0.374
offset_left = -38.0
offset_top = 0.360001
offset_right = 39.0
offset_bottom = 92.36
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Tip the Scales!"

[node name="HSeparator" type="HSeparator" parent="MainMenu"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
focus_neighbor_bottom = NodePath("../OptionsBtn")
theme = SubResource("Theme_1lrru")
theme_override_colors/font_pressed_color = Color(0.988235, 0.415686, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="OptionsBtn" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../StartBtn")
focus_neighbor_bottom = NodePath("../QuitBtn")
theme = SubResource("Theme_1lrru")
theme_override_colors/font_pressed_color = Color(0.988235, 0.415686, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitBtn" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../OptionsBtn")
focus_neighbor_bottom = NodePath("../StartBtn")
theme = SubResource("Theme_1lrru")
theme_override_colors/font_pressed_color = Color(0.988235, 0.415686, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Options" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 4.0
offset_right = 158.0
offset_bottom = 358.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Options"
horizontal_alignment = 1

[node name="MasterLabel" type="Label" parent="Options"]
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Options"]
layout_mode = 2
focus_neighbor_top = NodePath("../../Back")
focus_neighbor_bottom = NodePath("../MusicSlider")
min_value = -15.0
max_value = 15.0

[node name="MusicLabel" type="Label" parent="Options"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Options"]
layout_mode = 2
focus_neighbor_top = NodePath("../MasterSlider")
focus_neighbor_bottom = NodePath("../SFXSlider")
min_value = -15.0
max_value = 15.0

[node name="SFXVolume" type="Label" parent="Options"]
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="Options"]
layout_mode = 2
focus_neighbor_top = NodePath("../MusicSlider")
focus_neighbor_bottom = NodePath("../../Back")
min_value = -15.0
max_value = 15.0

[node name="Focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s5xlg")
volume_db = -10.426
bus = &"SFX"

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 303.0
offset_top = 297.0
offset_right = 345.0
offset_bottom = 323.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Options/SFXSlider")
focus_neighbor_bottom = NodePath("../Options/MasterSlider")
theme = SubResource("Theme_1lrru")
theme_override_colors/font_pressed_color = Color(0.988235, 0.415686, 0.0352941, 1)
theme_override_colors/font_hover_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_colors/font_focus_color = Color(0.968627, 0.823529, 0.0352941, 1)
theme_override_font_sizes/font_size = 18
text = "Back"

[node name="ParallaxBackground" parent="." instance=ExtResource("4_k8w1t")]

[connection signal="mouse_entered" from="MainMenu/StartBtn" to="." method="_on_start_btn_mouse_entered"]
[connection signal="pressed" from="MainMenu/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="focus_entered" from="MainMenu/OptionsBtn" to="." method="FocusEntered"]
[connection signal="mouse_entered" from="MainMenu/OptionsBtn" to="." method="_on_options_btn_mouse_entered"]
[connection signal="pressed" from="MainMenu/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="mouse_entered" from="MainMenu/QuitBtn" to="." method="_on_quit_btn_mouse_entered"]
[connection signal="pressed" from="MainMenu/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="mouse_entered" from="Options/MasterSlider" to="." method="_on_master_slider_mouse_entered"]
[connection signal="value_changed" from="Options/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="mouse_entered" from="Options/MusicSlider" to="." method="_on_music_slider_mouse_entered"]
[connection signal="value_changed" from="Options/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="mouse_entered" from="Options/SFXSlider" to="." method="_on_sfx_slider_mouse_entered"]
[connection signal="value_changed" from="Options/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
